<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <!-- Bird/Cat/Dog Radio Group-->

    <RadioGroup
        android:id = "@+id/animal_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/color_picker">

        <!-- Bird/Cat/Dog Button-->

        <RadioButton
            android:id="@+id/bird_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="25dp"
            android:background="@drawable/bird"
            android:button="@null"
            android:onClick="onAnimalButtonsClicked"/>

        <RadioButton
            android:id="@+id/cat_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="25dp"
            android:background="@drawable/cat"
            android:button="@null"
            android:onClick="onAnimalButtonsClicked"/>

        <RadioButton
            android:id="@+id/dog_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="25dp"
            android:background="@drawable/dog"
            android:button="@null"
            android:onClick="onAnimalButtonsClicked"/>

    </RadioGroup>

    <!-- Color Picker Radio Group-->

    <RadioGroup
        android:id = "@+id/color_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <!-- Color Picker Radio Buttons-->

        <RadioButton
            android:id="@+id/red-color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/red"
            android:button="@null"
            android:onClick="onColorButtonsClicked" />

        <RadioButton
            android:id="@+id/blue-color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/blue"
            android:button="@null"
            android:onClick="onColorButtonsClicked"/>

        <RadioButton
            android:id="@+id/green-color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/green"
            android:button="@null"
            android:onClick="onColorButtonsClicked"/>

        <RadioButton
            android:id="@+id/purple-color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/purple"
            android:button="@null"
            android:onClick="onColorButtonsClicked"/>

        <RadioButton
            android:id="@+id/yellow-color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/yellow"
            android:button="@null"
            android:onClick="onColorButtonsClicked"/>

    </RadioGroup>

    <!-- Bird/Cat/Dog Fragment Description-->

    <LinearLayout
        android:id="@+id/fact_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_toRightOf="@id/animal_group"
        android:layout_toEndOf="@id/animal_group"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/color_picker"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/bird_text"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:text="@string/bird_fact"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/cat_text"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="25dp"
            android:text="@string/cat_fact"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/dog_text"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="25dp"
            android:text="@string/dog_fact"
            android:visibility="invisible"/>

    </LinearLayout>

</RelativeLayout>
